--- a/engine/engine.css
+++ b/engine/engine.css
@@ -25,21 +25,21 @@ body {
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	z-index: 999999999999;
+	z-index: 99999;
 	display: none;
 }
 
 #screen {
-	margin:0;
+	margin: 0;
 	position: relative;
-	top:0;
+	top: 0;
 	overflow: hidden;
 	/*border: 1px green solid;*/
 }
 
 #menu {
-	margin:0;
-	left:0px;
+	margin: 0;
+	left: 0px;
 	position: relative;
 	width: 100px;
 	height: 750px;
@@ -93,7 +93,7 @@ body {
 }
 
 .picBox {
-	position:absolute;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	left: 0px;
@@ -103,15 +103,15 @@ body {
 
 .box {
 	z-index: 10;
-	position:absolute;
-	border: 1px red solid;
+	position: absolute;
+	/* border: 1px red solid; */
 }
 
 .gif {
-	position:absolute;
+	position: absolute;
 	z-index: 6;
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 	visibility: hidden;
 }
 
@@ -124,17 +124,17 @@ body {
 }
 
 .inventory img {
-	position:absolute;
+	position: absolute;
 	z-index: 6;
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 }
 
 #cache img {
 	position:absolute;
-	width:1px;
-	height:1px;
-	opacity:0;
+	width: 1px;
+	height: 1px;
+	opacity: 0;
 }
 
 .leftCursor { cursor: url(assets/cursors/left.png), auto; } 
