--- a/engine/engine.css
+++ b/engine/engine.css
@@ -98,10 +98,16 @@ body {
 }
 
 .full {
-	width: 100%;
-	height: 100%;
+	width: 100%; height: 100%;
 }
 
+.fullHeight {
+	width: auto; height: 100%
+}
+
+.fullWidth {
+	width: 100%; height: auto
+}
 .box {
 	z-index: 10;
 	position: absolute;
