--- a/engine/engine.css
+++ b/engine/engine.css
@@ -112,7 +112,7 @@ body {
 .box {
 	z-index: 10;
 	position: absolute;
-	border: 1px blueviolet solid;
+	/* border: 1px blueviolet solid; */
 }
 
 .gif {
