--- a/engine/engine.css
+++ b/engine/engine.css
@@ -115,12 +115,11 @@ body {
 	/* border: 1px palevioletred solid; */
 }
 
-.gif {
+.fullGif {
 	position: absolute;
 	z-index: 6;
 	width: 100%;
 	height: 100%;
-	visibility: hidden;
 }
 
 .inventory {
@@ -139,7 +138,7 @@ body {
 }
 
 #cache img {
-	position:absolute;
+	position: absolute;
 	width: 1px;
 	height: 1px;
 	opacity: 0;
