--- a/engine/engine.css
+++ b/engine/engine.css
@@ -4,84 +4,55 @@ body {
 	user-select: none;
 }
 
-#game {
-	display: flex;
-	user-select: none;
-	position: absolute;
-  	top: 50%;
-  	left: 50%;
-	margin-top: -425px;
-	margin-left: -475px;
-	border: 1px orange solid;
-}
-
 #screen {
-	margin: 0;
-	position: relative;
-	top: 0;
+	display: flex;
+	position: absolute;
+  	top: 50%; left: 50%;
+	margin-top: -425px; margin-left: -475px;
 	overflow: hidden;
-	border: 1px red solid;
-}
-
-#menu {
-	margin: 0;
-	left: 0px;
-	position: relative;
-	width: 100px;
-	height: 750px;
-	border: 1px purple solid;
+	/* border: 1px yellow solid; */
 }
 
 #inventory {
 	margin:0;
 	position: relative;
-	width: 100px;
-	height: 750px;
-	/*border: 1px orange solid;*/
-}
-
-#vinette {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	opacity: .5;
-	z-index: 7;
-	/* user-drag: none;  */
-	user-select: none;
+	width: 100px; height: 750px;
+	/* border: 1px orange solid; */
 }
 
 #transitions {
-	/* cursor: url(assets/cursors/closed.png), auto; */
 	position: absolute;
-	width: 100%;
-	height: 100%;	
+	width: 100%; height: 100%;
 	z-index: 5;
-	top: 0;
+}
+
+#cursorBlock {
+	position: absolute;
+	width: 100%; height: 100%;
+	visibility: hidden;
+	z-index: 100;
 }
 
 .transition {
-	/* cursor: url(assets/cursors/closed.png), auto; */
 	position: absolute;	
-	width: 100%;
-	height: 100%;
+	width: 100%; height: 100%;
 }
 
 #frame {
-	width: 100%;
-	height: 100%;
+	position: relative;
+	width: 100%; height: 100%;
+	z-index: 0;	
 }
 
-#img {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	z-index: 0;	
+.box {
+	z-index: 10;
+	position: absolute;
+	/* border: 1px palevioletred solid; */
 }
 
 .picBox {
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 0px; top: 0px;
 	z-index: 4;
 }
 
@@ -97,38 +68,26 @@ body {
 	width: 100%; height: auto
 }
 
-.box {
-	z-index: 10;
-	position: absolute;
-	border: 1px palevioletred solid;
-}
-
 .fullGif {
 	position: absolute;
+	width: 100%; height: 100%;
 	z-index: 6;
-	width: 100%;
-	height: 100%;
 }
 
 .inventory {
-	left: 0px;
-	top: 0px;
+	left: 0px; top: 0px;
 	position: relative;
-	width: 100px;
-	height: 100px
+	width: 100px; height: 100px
 }
 
 .inventory img {
 	position: absolute;
 	z-index: 6;
-	width: 100%;
-	height: 100%;
+	width: 100%; height: 100%;
 }
 
 #cache img {
-	position: absolute;
-	width: 1px;
-	height: 1px;
+	width: 1px; height: 1px;
 	opacity: 0;
 }
 
