--- a/engine/engine.css
+++ b/engine/engine.css
@@ -10,9 +10,9 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 #inventory { position: absolute; display: block; bottom: 0; width: 100%; height: 100px; 
     /* border: 1px orange solid;  */
 }
-.inventory { position: relative; margin: 10px; display: inline-block; z-index: 12;
+.inventory { position: relative; margin: 15px; display: inline-block; z-index: 12;  text-align: center;
     /* border: 1px red solid; */
-    img { width: 200px; z-index: 12; display: block; 
+    img { width: 200px; z-index: 12; display: block; margin: auto; 
         /* border: 1px yellow solid; */
 }}
 
