--- a/engine/baseStyle.css
+++ b/engine/baseStyle.css
@@ -4,17 +4,17 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 #screen { position: absolute; display: flex; overflow: hidden; }
 #frame { position: relative; width: 100%; height: 100%; z-index: 0;	}
 #transitions { position: absolute; width: 100%; height: 100%; z-index: 5; }
-.transition { position: absolute; width: 100%; height: 100%; opacity: 1}
+.transition { position: absolute; width: 100%; height: 100%; opacity: 1; 
+    /* border: 1px green solid; z-index: 5; */
+}
 #cursorBlock { position: absolute; width: 100%; height: 100%; visibility: hidden; z-index: 11; }
 #persistents { z-index: 6; }
 #inventory { position: absolute; display: block; bottom: 0; width: 100%; height: 100px; 
     /* border: 1px orange solid;  */
 }
-.inventory { position: relative; margin: 15px; display: inline-block; z-index: 12;  text-align: center;
+.inventory { position: relative; margin: 10px; display: inline-block; z-index: 12;
     /* border: 1px red solid; */
-    img { width: 200px; z-index: 12; display: block; margin: auto; 
-        /* border: 1px yellow solid; */
-}}
+    img { z-index: 12; display: block; }}
 
 .box { position: absolute; z-index: 10;
     border: 1px orangered solid;
